--- a/.swcrc
+++ b/.swcrc
@@ -1,7 +1,10 @@
 {
   "jsc": {
     "experimental": {
-      "plugins": [["@swc-jotai/react-refresh", {}]]
+      "plugins": [
+        ["@swc-jotai/react-refresh", {}],
+        ["swc-plugin-valtio", {}]
+      ]
     }
   }
 }
