--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "scheduler": "^0.23.0",
+    "swc-plugin-valtio": "^1.0.1",
     "typescript": "4.9.5",
     "use-context-selector": "^1.4.1",
     "valtio": "^1.10.3",
